syntax = "proto3";
package server_api_params;
option go_package = "github.com/qingw1230/study-im-server/pkg/proto/sdkws";

message CommonResp {
  string status = 1;
  int32 code = 2;
  string info = 3;
}

message UserInfo {
  string token = 1;
  bool admin = 2;
  string userId = 3;
  string password = 4;
  string nickName = 5;
  string personalSignature = 6;
  int32 joinType = 7;
  int32 sex = 8;
  string areaName = 9;
  string areaCode = 10;
}

message PublicUserInfo {
  string userId = 1;
  string nickName = 2;
  string faceUrl = 3;
  string personalSignature = 4;
  int32 sex = 5;
  string areaName = 6;
  string areaCode = 7;
  bool isFriend = 8;
}

message GroupInfo {
  string groupId = 1;
  string groupName = 2;
  string notification = 3;
  string introduction = 4;
  string faceUrl = 5;
  string ownerUserId = 6;
  int64 createTime = 7;
  uint32 memberCount = 8;
  int32 status = 9;
  string createUserId = 10;
  int32 groupType = 11;
  int32 needVerification = 12;
  int64 notificationUpdateTime = 13;
  string notificationUserId = 14;
}

message UserSendMsgResp {
  string serverMsgId = 1;
  string clientMsgId = 2;
  int64 sendTime = 3;
}

message MsgData {
  string sendId = 1;          // client 设置
  string recvId = 2;          // client 设置
  string groupId = 3;         // client 设置
  uint64 seq = 4;             // rpc 设置
  string serverMsgId = 5;     // rpc 设置 timestamp + sendId + randNum
  string senderNickName = 6;  // client 设置
  string senderFaceUrl = 7;   // client 设置
  int32 sessionType = 9;      // client 设置 Single Group ...
  int32 contentType = 10;     // client 设置 Text Picture Voice Video File ... 
  string content = 11;        // client 设置
  int32 msgFrom = 8;          // client 设置 User Sys
  int64 createTime = 13;      // client 设置
  int64 sendTime = 12;        // rpc 设置 timestamp
  int32 status = 14;
}

message ConversationInfo {
  string ownerUserId = 1;
  string conversationId = 2;
  int32 conversationType = 3;
  string conversationName = 4;
  string userId = 5;
  string groupId = 6;
  int32 memberCount = 7;
  int32 noReadCount = 8;
  int32 topType = 9;
  string lastMessage = 10;
  int64 lastMessageTime = 11;
  int32 status = 12;
}
